--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>String Reverser</title>
-  
-  <link rel="stylesheet" href="">
+   <link rel="stylesheet" href="">
 </head>
 <body>
+  
+ <h1>String Reverser </h1>
+  
+  <div>
+    <input type="text" id="textInput">
+  </div>
+  
+  <div>
+    <input type="button" id="doAction" value="Reverse String">
+  </div>
+  
+  <div id="display"></div>
+  
+  
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="script.js"></script> 
 </body>
