add additional functionality

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>String Reverser</title>
+  <title>String Changer</title>
    <link rel="stylesheet" href="">
 </head>
 <body>
@@ -14,7 +14,13 @@
   </div>
   
   <div>
-    <input type="button" id="doAction" value="Reverse String">
+    <input type="radio" name="method" value="reverse" checked> Reverse
+     <input type="radio" name="method" value="random"> Random 
+     <input type="radio" name="method" value="alphabetize"> Alphabetize  
+  </div>
+  
+  <div>
+    <input type="button" id="doAction" value="Change String">
   </div>
   
   <div id="display"></div>
